Fix social media links and spacing issue

--- a/src/semantic/semantic.less
+++ b/src/semantic/semantic.less
@@ -314,7 +314,7 @@
     color: @fa-git !important;
   }
   /* End of overrides */
-  
+
   &.fa-500px {
     color: @fa-500px;
   }
@@ -741,4 +741,8 @@
   &.fa-youtube-square {
     color: @fa-youtube-square;
   }
+}
+
+.ui.button:not(.icon) > .icon:not(.button):not(.dropdown) {
+  margin: 0em !important;
 }
